HDP Helm Chart Version v1.0

--- a/charts/hybriddatapipeline/config/hdpdeploy.properties
+++ b/charts/hybriddatapipeline/config/hdpdeploy.properties
@@ -175,12 +175,12 @@ HDP_ENABLE_FIPS={{ include "boolToYesNo" .Values.hdp.fips.enabled }}
 ; running multiple Docker nodes on a single host machine.
 
 ; The initial JVM heap size in megabytes. The default is 4096 megabytes.
-HDP_HEAP_INITIAL={{- .Values.hdp.resources.requests.memory | trunc 63 | trimSuffix "Mi" }}
+HDP_HEAP_INITIAL={{ include "toMegabytes" (.Values.hdp.resources.requests.memory | default "4096") }}
 
 ; The maximum JVM heap size in megabytes. This value cannot be less than the
 ; initial JVM heap size. The default value is the value specified for the
 ; HDP_HEAP_INITIAL property.
-HDP_HEAP_MAX={{- .Values.hdp.resources.limits.memory | trunc 63 | trimSuffix "Mi" }}
+HDP_HEAP_MAX={{ include "toMegabytes" (.Values.hdp.resources.limits.memory | default "4096") }}
 
 ; Set the proxy server IP address(es) to allow the server to trust
 ; The IP address(es) should be separated by '|' character
