publishing Helm Chart v1.0.2

--- a/charts/hybriddatapipeline/config/hdpdeploy.properties
+++ b/charts/hybriddatapipeline/config/hdpdeploy.properties
@@ -54,7 +54,11 @@ HDP_SERVER_CERT_FILE=
 ; the hostname does not resolve correctly if set to 'localhost'. Instead, you
 ; must use use the Docker-specific lookup name 'host.docker.internal'.
 {{- if (.Values.hdp.database.postgres.enabled) }}
+{{- if eq .Values.postgresql.architecture "replication" }}
+HDP_DATABASE_HOSTNAME={{ .Release.Name }}-{{.Values.hdp.database.postgres.hostName}}-primary
+{{- else }}
 HDP_DATABASE_HOSTNAME={{ .Release.Name }}-{{.Values.hdp.database.postgres.hostName}}
+{{- end }}
 {{ else }}
 HDP_DATABASE_HOSTNAME=
 {{- end }}
@@ -152,7 +156,7 @@ HDP_LOAD_BALANCER_HOST_NAME={{ .Values.hdp.loadbalancer.hostName }}
 ; For more information about creating a PEM file, refer to "The PEM file":
 ; https://docs.progress.com/bundle/datadirect-hybrid-data-pipeline-installation-46/page/The-PEM-file.html.
 
-{{- if (.Values.hdpingressconfiguration.tls.enabled ) }}
+{{- if (.Values.hdp.hdpingressconfiguration.tls.enabled ) }}
 HDP_LOAD_BALANCER_CERT_FILE=hdp-cert.pem
 {{ else }}
 HDP_LOAD_BALANCER_CERT_FILE=
