--- a/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
+++ b/charts/hybriddatapipeline/secrets/hdp-secrets.yaml
@@ -10,8 +10,12 @@ data:
   #         hdp-admin-password: base64-password
   hdp-admin-password: 
   hdp-user-password: 
-  account-database-admin-username: 
-  account-database-admin-password: 
+  account-database-admin-username:
   account-database-user-username: 
+  
+  # FIPS 140-2 Compliant Database Passwords
+  # Required when hdp.fips.enabled: true in values.yaml
+  # Must meet FIPS 140-2 password complexity requirements 
+  account-database-admin-password: 
   account-database-user-password: 
-  hdp-license-key: 
+  hdp-license-key:
