--- a/charts/hybriddatapipeline/templates/logs-pvc.yaml
+++ b/charts/hybriddatapipeline/templates/logs-pvc.yaml
@@ -3,8 +3,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Release.Name }}-logs-storage-volume
+  labels: {{- include "hdp.labels.merge" (dict "commonLabels" .Values.hdp.commonLabels "specificLabels" .Values.hdp.persistence.labels "context" .) | nindent 4 }}
   annotations:
-    "helm.sh/resource-policy": keep
+    {{- $baseAnnotations := dict "helm.sh/resource-policy" "keep" -}}
+    {{- include "hdp.annotations.merge" (dict "commonAnnotations" .Values.hdp.commonAnnotations "specificAnnotations" .Values.hdp.persistence.annotations "baseAnnotations" $baseAnnotations "context" .) | nindent 4 }}
 spec:
   accessModes:
     - ReadWriteMany
