--- a/charts/hybriddatapipeline/templates/logging-properties-configmap.yaml
+++ b/charts/hybriddatapipeline/templates/logging-properties-configmap.yaml
@@ -2,6 +2,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  labels: {{- include "hdp.labels.merge" (dict "commonLabels" .Values.hdp.commonLabels "specificLabels" .Values.hdp.configLabels "context" .) | nindent 4 }}
+  annotations: {{- include "hdp.annotations.merge" (dict "commonAnnotations" .Values.hdp.commonAnnotations "specificAnnotations" .Values.hdp.configAnnotations "context" .) | nindent 4 }}
   name: {{ .Release.Name }}-logging-properties-configmap
 data:
   hdplogging.properties: |-
