--- a/charts/hybriddatapipeline/templates/opa-service.yaml
+++ b/charts/hybriddatapipeline/templates/opa-service.yaml
@@ -7,24 +7,14 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels: {{- include "hdp.labels.merge" (dict "commonLabels" $global.Values.hdp.commonLabels "specificLabels" $global.Values.hdp.services.labels "context" $global) | nindent 4 }}
   annotations:
-    {{ $opaPath := (printf "%s-%s-%d" $global.Release.Name $global.Values.hdp.services.hdpService.name $ordinal) }}
-    {{- if $global.Values.hdpingressconfiguration.haproxy.enabled }}
-    haproxy.org/check: "{{ $global.Values.hdp.services.opAccessorService.check }}"
-    haproxy.org/check-http: HEAD {{ $global.Values.hdp.services.opAccessorService.checkPath }}
-    haproxy.org/check-interval: {{ $global.Values.hdp.services.opAccessorService.checkInterval }}
-    haproxy.org/route-acl: path_beg -i {{ $global.Values.hdp.services.opAccessorService.aclPath }}_{{ $opaPath }}
-    {{- else if $global.Values.hdpingressconfiguration.agic.enabled }}
-    appgw.ingress.kubernetes.io/probe-path: "{{ $global.Values.hdp.services.opAccessorService.check }}"
-    appgw.ingress.kubernetes.io/probe-protocol: HEAD {{ $global.Values.hdp.services.opAccessorService.checkPath }}
-    appgw.ingress.kubernetes.io/probe-interval: {{ $global.Values.hdp.services.opAccessorService.checkInterval }}
-    appgw.ingress.kubernetes.io/request-routing-rules: "PathBasedRouting"
-    appgw.ingress.kubernetes.io/backend-path-prefix: {{ $global.Values.hdp.services.opAccessorService.aclPath }}_{{ $opaPath }}
-    {{- end }}
+    {{- $baseAnnotations := include "hdp.opaService.baseAnnotations" (dict "context" $global "ordinal" $ordinal) -}}
+    {{- include "hdp.annotations.merge" (dict "commonAnnotations" $global.Values.hdp.commonAnnotations "specificAnnotations" $global.Values.hdp.services.annotations "baseAnnotations" $baseAnnotations "context" $global) | nindent 4 }}
   name: {{ $global.Release.Name }}-{{ $global.Values.hdp.services.opAccessorService.name }}-{{ $ordinal }}
   namespace: {{ $global.Release.Namespace }}
 spec:
-  {{- if eq $global.Values.hdpingressconfiguration.clusterType "cloud" }}
+  {{- if eq $global.Values.hdp.hdpingressconfiguration.clusterType "cloud" }}
   type: ClusterIP
   {{ else }}
   type: NodePort
@@ -34,8 +24,6 @@ spec:
     port: {{ $global.Values.hdp.ports.opAccessor.port }}
     protocol: TCP
     targetPort: {{ $global.Values.hdp.ports.opAccessor.targetPort }}
-  selector:
-    app: hdp-server-app
-    statefulset.kubernetes.io/pod-name: {{ $global.Release.Name }}-{{ $global.Values.hdp.services.hdpService.name }}-{{ $ordinal }}
+  selector: {{- include "hybriddatapipeline.selectorLabels" $global | nindent 8 }}
 {{- end }}
 {{- end }}
